# fybdthemes

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: index.html  index.ipynb  index.md
docs/.ipynb_checkpoints/: index-checkpoint.ipynb
fybdthemes/: __init__.py  diverging.py  plot.py  sequential.py
palettes/: __init__.py  diverging.py  qualitative.py  sequential.py  theme.py
