[tool.poetry]
name = "palettes"
version = "0.1.0"
description = ""
authors = ["Simon Dirmeier <simon.dirmeier@web.de>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
