[tool.poetry]
name = "palettes"
version = "0.1.0"
description = "Color palettes for Python"
authors = ["Simon Dirmeier <simon.dirmeier@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
jupyter = "^1.0.0"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38

[testenv]
skip_install = true
commands_pre =
    pip install poetry
    poetry install
    python -m ipykernel install --name palettes-dev --user
commands =
    jupyter nbconvert --execute README.ipynb --to markdown
    pylint palettes
"""

[tool.pylint.'MESSAGES CONTROL']
max-line-length = "80"
disable = "missing-module-docstring"
