[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fybdthemes"
description = "Color palettes and plot themes"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/dirmeier/fybdthemes"
keywords = ["color palettes", "themes"]
classifiers=[
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.3.3",
    "seaborn>=0.11.0",
    "numpy>=1.19.4",
    "palettable>=3.3.3"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dirmeier/fybdthemes"

[tool.hatch.version]
path = "fybdthemes/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "./gitignore",
    "/.pre-commit-config.yaml"
]


[tool.hatch.envs.test.scripts]
lint = 'pylint fybdthemes'
test = 'pytest -v --cov=./fybdthemes --cov-report=xml fybdthemes'

[tool.black]
line-length = 80
extend-ignore = "E203"
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
include_trailing_comma = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    '__init__.py:F401',
]

[tool.pylint.messages_control]
disable = """
invalid-name,missing-module-docstring,R0801
"""

[tool.bandit]
skips = ["B101"]

[tool.pydocstyle]
convention= 'google'
match = '^fybdthemes/.*/((?!_test).)*\.py'